# pytest-conda-solvers

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pixi.toml  pyproject.toml  tox.ini
.github/workflows/: main.yml  tests.yml
conda-solver-tests/: basic.yaml  constricting_specs.yaml  cuda.yaml  integration.yaml
docs/: conda-solver-tests.md  conf.py  cst_schema.json  index.md  robots.txt  test-schema.md
pytest_conda_solvers/: cli.py  fixtures.py  helpers.py  models.py  plugin.py  server.py
pytest_conda_solvers/base_tests/: __init__.py  install.py
pytest_conda_solvers/data/: __init__.py  channel-1_non-noarch.json  channel-2_noarch.json  channel-2_non-noarch.json  channel-4_noarch.json  channel-4_non-noarch.json  channel-5_noarch.json  channel-5_non-noarch.json  index.json.zst  index2.json.zst  index4.json.zst  index5.json.zst
pytest_conda_solvers/data/conda_format_repo/: index.html  rss.xml
tests/: requirements.txt  test_conda_solvers.py  test_data.py
tools/durations/: Linux.json
